# simpet

./: .dockerignore  .env_template  .gitattributes  .gitignore  .gitmodules  CODE_OF_CONDUCT.md  Dockerfile  FDG_EMIM.yml  HER3_0H.yml  HER3_192H.yml  HER3_24H.yml  HER3_48H.yml  HER3_72H.yml  Params_template.yml  Params_test.yml  README.md  brainviset.py  cesga_environment.sh  cesga_launch.sh  config.yaml  config.yml  config_jesus.yml  config_zr89.yml  docker-compose.yaml  experiment.py  initialParams.yml  initialParams_BV.yml  log.run  log_setup.txt  makefile  process_wb_patients.py  pyproject.toml  requirements.txt  setup.py  setup.sh  setup_cesga.py  simpet.py  simpet_paths.sh  test.py  wholebody.py
.github/: FUNDING.yml
assets/: phg.2.9.2.tar.Z  simset_for_stir.patch
configs/: config.yaml  config_jesus.yaml  config_test.yaml  config_test_brainviset.yaml  config_test_wholebody.yaml  randfig.yaml
randfigs/: config.yaml
scanners/: Albira_SI.yml  Discovery_ST.yml  Discovery_STE.yml  GE_Advance.yml  Inveon.yml  Siemens_mCT.yml  Siemens_mMR.yml  Vereos.yml  _Scanner_Template.yml  scanner_tools.py
scripts/: check_params_osem3d.py  clean-config.sh  clean-config_test.sh  diff_yaml.py  experiment.py  experiment_brainviset.py  experiment_grid.py  experiment_set.py  experiment_wholebody.py  launch_experiment_set.sh  randfig.py  reorder_configs.py  smudge-config.sh  smudge-config_test.sh  stir_hs_checks.py  to_wandb.py
src/: PETMR_to_maps.py  patient2maps.py
utils/: apple.py  patient2maps.py  resources.py  scanner_tools.py  spm_tools.py  tools.py  wb_tools.py
(+62 files in other folders)
